# boilerplate_monolith_clean_architecture

./: .dockerignore  .gitignore  Makefile  README.md  alembic.ini  entrypoint.sh  generate_jwt_keys.sh  pyproject.toml
docker_compose/: all.yml  app.yml  db.yml  kafka.yml  redis.yml
env/: .env.default  .env.docker.example  .env.example
src/adapters/: auth.py  constants.py  cookie_service.py  email_service.py  password_hasher.py  transaction_manager.py  user_notificator.py  user_uuid_provider.py
src/adapters/orm/: post.py
src/adapters/repositories/: base.py  post.py  user.py
src/application/dtos/: pagination.py  user.py
src/application/exceptions/: repository.py
src/application/interfaces/: analyze_service.py  user_notificator.py
src/application/use_cases/: base.py  message_from_user.py
src/boilerplate_monolith_clean_architecture/adapters/: analyze_service.py  auth.py  cookie_service.py  email_service.py  password_hasher.py  transaction_manager.py  user_uuid_provider.py
src/boilerplate_monolith_clean_architecture/config/: auth.py  base.py  broker.py  logs.py  smtp.py
src/boilerplate_monolith_clean_architecture/controllers/: __init__.py  broker.py  dishka_inject.py  tasks.py
src/boilerplate_monolith_clean_architecture/main/: api_gateway.py  exception_handlers.py  web.py  worker.py
src/config/: app.py  auth.py  base.py  worker.py
src/controllers/: broker.py  tasks.py
src/controllers/rest/: auth.py  post.py  user.py
src/main/: exception_handlers.py  web.py
src/main/di/: __init__.py
tests/domain/: conftest.py
tests/factories/: entities.py
(+100 files in other folders)
