[project]
name = "monilite-clean-architecture"
version = "0.1.0"
description = "FastAPI Monolith Clean Architecture Boilerplate"
authors = [{ name = "timur" }]
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.11.4",
    "pydantic-settings>=2.9.1",
    "dishka>=1.5.3",
    "orjson>=3.10.18",
    "faststream[confluent]>=0.5.40",
    "uvicorn>=0.34.2",
    "ruff>=0.11.10",
    "taskiq-redis>=1.0.8",
    "alembic>=1.15.2",
    "sqladmin>=0.20.1",
    "bcrypt>=4.3.0",
    "aiosmtplib>=4.0.1",
    "colorlog>=6.9.0",
    "pyjwt[crypto]>=2.9.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "factory-boy>=3.3.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.10",
]

[tool.ruff]
src = ["src"]
lint.select = [
    'E',  # pycodestyle errors
    'W',  # pycodestyle warnings
    'F',  # pyflakes
    'I',  # isort
    'Q',  # quotes
    'TID',  # tidy imports
    'ANN',  # annotations
    'B',  # bugbear
    'SIM',  # simplify
    "T",  # Pyright-inspired type checks
]
lint.ignore = ['B008', 'B904', 'SIM105', 'B007', 'SIM108', 'ANN401']
exclude = [
    '.cache/*',
    '.venv',
]

line-length = 120
indent-width = 4
target-version = 'py313'

preview = true

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
#env_files=[".env.test"]
#asyncio_default_fixture_loop_scope="session"